Try aggregating code coverage report for multi-project build