@@ -1,48 +1,43 @@
 plugins {
-    id("java")
+    id("internal.java")
+    id("internal.jacoco")
     id("java-test-fixtures")
-    id("jacoco")
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(15)
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ["--enable-preview", "--release", "15", "-Xlint:deprecation", "-Xlint:unchecked"]
-}
-
-tasks.withType(Test).configureEach {
-    useJUnitPlatform()
-    maxParallelForks = 8
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += "--enable-preview"
+// Do not generate reports for individual projects
+tasks.named("jacocoTestReport") {
+    enabled = false
 }
 
 configurations {
-    all {
-        resolutionStrategy {
-            failOnVersionConflict()
+    // Share sources folder with other projects for aggregated JaCoCo reports
+    transitiveSourcesElements {
+        visible = false
+        canBeResolved = false
+        canBeConsumed = true
+        attributes {
+            attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
+            attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
+            attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, 'source-folders'))
+        }
+        sourceSets.main.java.srcDirs.forEach {
+            outgoing.artifact(it)
         }
     }
-}
 
-jacoco {
-    toolVersion = "0.8.6"
-}
-
-jacocoTestReport {
-    reports {
-        executionData.setFrom project.fileTree(dir: ".", include: "**/build/jacoco/*.exec")
-        xml.enabled true
+    // Share the coverage data to be aggregated for the whole product
+    coverageDataElements {
+        visible = false
+        canBeResolved = false
+        canBeConsumed = true
+        attributes {
+            attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
+            attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
+            attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, 'jacoco-coverage-data'))
+        }
+        // This will cause the test task to run if the coverage data is requested by the aggregation task
+        outgoing.artifact(tasks.named("test").map { task ->
+            task.extensions.getByType(JacocoTaskExtension).destinationFile
+        })
     }
 }
